Improved styles, front-end. Added google login to the Login section.

--- a/CalorieCounter/GoogleService-Info.plist
+++ b/CalorieCounter/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>316080903843-gric6bsbtvgvoabjakbtb8ke6vke1qbb.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.316080903843-gric6bsbtvgvoabjakbtb8ke6vke1qbb</string>
 	<key>API_KEY</key>
 	<string>AIzaSyAsTNeCNrbiur10VTZua80PT79N38oEy28</string>
 	<key>GCM_SENDER_ID</key>
