--- a/CalorieCounter/Info.plist
+++ b/CalorieCounter/Info.plist
@@ -15,5 +15,7 @@
 	</array>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
+	<key>SPOONACULAR_API_KEY</key>
+	<string>$(SPOONACULAR_API_KEY)</string>
 </dict>
 </plist>
